--- a/HidaSushi.Server/appsettings.json
+++ b/HidaSushi.Server/appsettings.json
@@ -1,27 +1,59 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=HidaSushiDb;User Id=sa;Password=Supersecret!;TrustServerCertificate=true;",
+    "ReadOnlyConnection": "Server=localhost;Database=HidaSushiDb;User Id=sa;Password=Supersecret!;TrustServerCertificate=true;ApplicationIntent=ReadOnly;",
+    "Redis": "localhost:6379"
+  },
+  "Database": {
+    "MaxRetryCount": 3,
+    "CommandTimeout": 30,
+    "EnableSensitiveDataLogging": false,
+    "MaxPoolSize": 100,
+    "ConnectionLifetime": 300,
+    "EnableDetailedErrors": false,
+    "QuerySplittingBehavior": "SplitQuery"
+  },
+  "Caching": {
+    "Redis": {
+      "Enabled": true,
+      "DefaultExpiration": "00:15:00",
+      "SlidingExpiration": "00:05:00"
+    },
+    "InMemory": {
+      "Enabled": true,
+      "MaxSize": "100MB"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=HidaSushiDb;Trusted_Connection=true;TrustServerCertificate=true;MultipleActiveResultSets=true"
+  "Performance": {
+    "EnableQueryLogging": false,
+    "SlowQueryThreshold": "00:00:02",
+    "EnableBatchOperations": true,
+    "DefaultBatchSize": 1000,
+    "EnableAsyncEnumeration": true
+  },
+  "Monitoring": {
+    "EnableMetrics": true,
+    "EnableHealthChecks": true,
+    "DatabaseHealthCheckTimeout": 10
   },
   "Jwt": {
     "SecretKey": "HidaSushi-Super-Secret-Key-For-Admin-Auth-2024!",
     "Issuer": "HidaSushi",
+    "Audience": "HidaSushiUsers",
     "ExpirationMinutes": "480"
   },
-  "Stripe": {
-    "PublishableKey": "pk_test_your_stripe_publishable_key",
-    "SecretKey": "sk_test_your_stripe_secret_key"
+  "Domain": {
+    "ApiUrl": "https://apimailbroker.ddns.net",
+    "FrontendUrl": "https://mailbroker.ddns.net",
+    "AdminUrl": "https://adminmailbroker.ddns.net"
   },
-  "Email": {
-    "SmtpServer": "smtp.gmail.com",
-    "SmtpPort": 587,
-    "Username": "your-email@gmail.com",
-    "Password": "your-app-password"
-  }
-}
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Warning",
+      "Microsoft.EntityFrameworkCore.Infrastructure": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
+} 
