--- a/HidaSushi.Client/package.json
+++ b/HidaSushi.Client/package.json
@@ -10,9 +10,11 @@
   },
   "devDependencies": {
     "@tailwindcss/cli": "^4.0.15",
-    "tailwindcss": "^4.0.15"
+    "tailwindcss": "^4.0.15",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.9"
   },
   "dependencies": {
     "flowbite": "^3.1.2"
   }
-} 
+}
